@@ -70,8 +70,5 @@
 	  to decide which domains can be batch created with mass_setup_XXX
 	  functions
 
- - create sub-domains and sub-servers before main virtualhost, to avoid
-   problems with ServerAlias *.foo.com
-
  - SSL on default IP
 
